# common-api-cmdline

./: .project  CMakeLists.txt  README.md  codegen.pom.xml  codegen.pom.xml.in  commonAPICodeGen.in  pom.xml
cmake/: CMakeLists.txt  INSTALL.md  README.md
cmake/common/: CMakeLists.txt  CommonAPICodeGenCommonConfig.cmake  CommonAPICodeGenConfig.cmake
cmake/example/client/: CMakeLists.txt  client.cpp
cmake/example/service/: CMakeLists.txt  Climate-dbus.fdepl  Climate-someip.fdepl  Climate.fidl  service.cpp
examples/: README.md
examples/basic/basic-example-client/: CMakeLists.txt
examples/basic/basic-example-client/src/: main.cpp
examples/basic/basic-example-service/: CMakeLists.txt
examples/basic/basic-example-service/fidl/: BasicExampleInterface-dbus.fdepl  BasicExampleInterface.fidl
examples/basic/basic-example-service/src/: BasicExampleInterfaceStubImpl.cpp  BasicExampleInterfaceStubImpl.h  main.cpp
examples/basic/test-data/barpath/: ExampleTypes2.fidl
examples/basic/test-data/foopath/: ExampleTypes.fidl
examples/circulardependency/circulardependency-example-backend-a/: CMakeLists.txt
examples/circulardependency/circulardependency-example-backend-a/fidl/: CircularDependencyExampleInterfaceA-dbus.fdepl  CircularDependencyExampleInterfaceA.fidl
examples/circulardependency/circulardependency-example-backend-b/: CMakeLists.txt
examples/circulardependency/circulardependency-example-backend-b/fidl/: CircularDependencyExampleInterfaceB-dbus.fdepl  CircularDependencyExampleInterfaceB.fidl
examples/circulardependency/circulardependency-example-service-a/: CMakeLists.txt
examples/circulardependency/circulardependency-example-service-a/src/: CircularDependencyExampleInterfaceAStubImpl.cpp  CircularDependencyExampleInterfaceAStubImpl.h  main.cpp
examples/circulardependency/circulardependency-example-service-b/: CMakeLists.txt
examples/circulardependency/circulardependency-example-service-b/src/: CircularDependencyExampleInterfaceBStubImpl.cpp  CircularDependencyExampleInterfaceBStubImpl.h  main.cpp
examples/sharedtypes/sharedtypes-example-service/: CMakeLists.txt
examples/sharedtypes/sharedtypes-example-service/fidl/: SharedTypesExampleInterface-dbus.fdepl  SharedTypesExampleInterface.fidl
examples/sharedtypes/sharedtypes-example-service/src/: SharedTypesExampleInterfaceStubImpl.cpp  SharedTypesExampleInterfaceStubImpl.h  main.cpp
examples/sharedtypes/sharedtypes-example-typespackage/: CMakeLists.txt
examples/sharedtypes/sharedtypes-example-typespackage/fidl/: ExampleTypes.fidl
host-tools/: CMakeLists.txt  CommonAPICodeGenFrameworkConfig.cmake  CommonAPICodeGenFrameworkConfig.cmake.in  codegen.pom.xml.in  codegen.properties  commonAPICodeGen.in  pom.xml
host-tools/org.genivi.commonapi.cmdline/: .classpath  .project  pom.xml
host-tools/org.genivi.commonapi.cmdline/src/org/genivi/commonapi/cmdline/: GeneratorInterface.java  StandaloneGen.java
host-tools/org.genivi.commonapi.cmdlinelauncher/: pom.xml
host-tools/org.genivi.commonapi.cmdlinelauncher/src/org/genivi/commonapi/cmdline/main/: Main.java
org.genivi.commonapi.cmdline/: pom.xml
org.genivi.commonapi.cmdline/src/org/genivi/commonapi/cmdline/: StandaloneGen.java
org.genivi.commonapi.cmdlinelauncher/: .project  pom.xml
org.genivi.commonapi.cmdlinelauncher/src/org/genivi/commonapi/cmdline/main/: LaunchableWithArgs.java  Main.java
src/org/genivi/commonapi/cmdline/: GeneratorInterface.java
src/org/genivi/commonapi/cmdline/main/: Main.java  StandaloneGen.java
